--- a/css/styles.css
+++ b/css/styles.css
@@ -74,31 +74,13 @@ main {
     margin: 10vh;
     margin-bottom: 2vh;
     display: grid;
-    grid-template-columns: 30% 48% 20%; /* Using % instead of 'fr' in this case to add flexibility*/
+    grid-template-columns: 26% 26% 27% 18%; /* Using % instead of 'fr' in this case to add flexibility*/
     grid-template-rows: 36vh;
     gap: 1%; /*If using 'vh' or 'wh' the grid is overfloaded*/
 }
 
-.projectButton {
+.Button {
     width: 100%; /* So it adapts to the grids' column width */
-    height: 100%;
-    border: none;
-    background-color: #0F6292;
-    text-align: center;
-    cursor: pointer;
-}
-
-.aboutButton {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: #0F6292;
-    text-align: center;
-    cursor: pointer;
-}
-
-.contactButton {
-    width: 100%;
     height: 100%;
     border: none;
     background-color: #0F6292;
@@ -114,36 +96,9 @@ main {
     margin: 10vh;
     margin-top: 0vh;
     display: grid;
-    grid-template-columns: 15% 48% 35%; /* Using % instead of 'fr' in this case to add flexibility*/
+    grid-template-columns: 40% 28% 30%; /* Using % instead of 'fr' in this case to add flexibility*/
     grid-template-rows: 36vh;
     gap: 1%;
-}
-
-.projectButton2 {
-    width: 100%; /* So it adapts to the grids' column width */
-    height: 100%;
-    border: none;
-    background-color: #0F6292;
-    text-align: center;
-    cursor: pointer;
-}
-
-.aboutButton2 {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: #0F6292;
-    text-align: center;
-    cursor: pointer;
-}
-
-.contactButton2 {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: #0F6292;
-    text-align: center;
-    cursor: pointer;
 }
 
 /***** FONTS *****/
