--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ header h1 {
     font-family: Pixelmap;
     color: #FFC300;
     font-size: 3vh;
+    cursor: pointer;
 }
 
 header ul {
@@ -86,6 +87,13 @@ main {
     background-color: #0F6292;
     text-align: center;
     cursor: pointer;
+
+    /*
+    box-shadow: -0.5vh 0 0 0 black,
+                0.5vh 0 0 0 black,
+                0 -0.5vh 0 0 black,
+                0 0.5vh 0 0 black;
+    */
 }
 
 /** WRAPPER 2**/
