--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,6 @@ main {
     width: 100%; /* So it adapts to the grids' column width */
     height: 100%;
     border-radius: 1vh;
-    background-color: #0F6292;
     text-align: center;
     cursor: pointer;
 
@@ -96,6 +95,29 @@ main {
                 0 0.5vh 0 0 black;
     */
 }
+
+#projectButton {
+    width: 100%;
+    height: 100%;
+    background-image: url(../media/nightpixel.jpg); 
+    background-size: cover;
+    color: #FFC300;
+    border-color: #FFC300;
+    text-shadow: 0vh 1vh 2vh black ;
+    font-family: Pixelmap;
+    font-size: 5vh;
+}
+
+#contactButton {
+    background-image: url(../media/handpixelmedia.jpg); 
+    background-size: cover;
+    color: black;
+    border-color:mediumpurple;
+    text-shadow: 0vh 1vh 2vh black ;
+    font-family: Pixelmap;
+    font-size: 5vh;
+}
+
 
 /** WRAPPER 2**/
 
