--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,6 @@ main {
     width: 100%; /* So it adapts to the grids' column width */
     height: 100%;
     border-radius: 1vh;
-    text-align: center;
     cursor: pointer;
 
     /*
@@ -98,7 +97,11 @@ main {
 
 #projectButton {
     width: 100%;
-    height: 100%;
+    height: 100%;            /* Will double */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Will change to flex-start when clicked */
+    padding-top: 0vh;        /* Will change to 5vh when clicked */
     background-image: url(../media/nightpixel.jpg); 
     background-size: cover;
     color: #FFC300;
@@ -111,7 +114,7 @@ main {
 #contactButton {
     background-image: url(../media/handpixelmedia.jpg); 
     background-size: cover;
-    color: black;
+    color: #FFC300;
     border-color:mediumpurple;
     text-shadow: 0vh 1vh 2vh black ;
     font-family: Pixelmap;
