--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ header li {
 
 header button {
     border: none;
+    border-radius: 0.5vh;
     margin-right: 3vh;
     padding-top: 1vh;
     padding-bottom: 1vh;
@@ -95,11 +96,15 @@ main {
     */
 }
 
-#projectButton {
+#projectDiv {
+    border-radius: 1vh;
+    border-width: 1vh;
+    cursor: pointer;
     width: 100%;
     height: 100%;            /* Will double */
     display: flex;
     flex-direction: column;
+    text-align: center;
     justify-content: center; /* Will change to flex-start when clicked */
     padding-top: 0vh;        /* Will change to 5vh when clicked */
     background-image: url(../media/nightpixel.jpg); 
