--- a/css/styles.css
+++ b/css/styles.css
@@ -122,9 +122,12 @@ main {
     width: 80%;
     height: 50vh;
     background-color: #1E2328;
-    display: flex;
-    flex-direction: column;
-    /*visibility: hidden;*/
+    display: grid;        /* WIll change to "none" */
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10vh 10vh 10vh 10vh;
+    gap: 2vh;
+    row-gap: 4vh;
+    visibility: visible;  /* Will change to "hidden" */
 
 }
 
