--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ main {
 
 /** WRAPPER 1**/
 
-.wrapper1{
+#wrapper1 {
     width: 100%;
     height: 50%;
     margin: 8vh;
@@ -106,7 +106,7 @@ main {
     flex-direction: column;
     text-align: center;
     align-items: center;
-    justify-content: center; /* Will change to flex-start when clicked */
+    justify-content: center; /*Will change to flex-start when clicked */
     padding-top: 0vh;        /* Will change to 5vh when clicked */
     background-image: url(../media/nightpixel.jpg); 
     background-size: cover;
@@ -121,7 +121,7 @@ main {
     margin-top: 7vh;
     width: 80%;
     height: 50vh;
-    display: none;        /* WIll change to "grid" */
+    display: none;       /*  WIll change to "grid" */
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 10vh 10vh 10vh 10vh;
     gap: 2vh;
@@ -159,7 +159,7 @@ main {
 
 /** WRAPPER 2**/
 
-.wrapper2{
+#wrapper2 {
     width: 100%;
     height: 50%;
     margin: 10vh;
