refactor: skills image update

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ main {
     justify-content: center; 
     margin-top: 0vh;
     padding-top: 0vh;    
-    background-image: url(../media/nightpixel.jpg); 
+    background-image: url(../media/skills.jpg); 
     background-size: cover;
     color: #FFC300;
     border-color: #FFC300;
