--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ main {
 
 @font-face {
     font-family:"Pixelmap";
-    src: url("/fonts/04B_30__.ttf") format("truetype");
+    src: url("/fonts/pixelmap.ttf") format("truetype");
 }
 
 @font-face {
