--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ main {
     background-image: url(../media/mifacepixel.png); 
     background-size: cover;
     border-radius: 1vh;
+    cursor: pointer;
 }
 
 #skillsDiv {
@@ -192,6 +193,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 2s, visibility 2s;
 }
 
 
